fix saving to file

--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
    ],
    "source": [
     "runs = [[\"Best\", \"Generation\"]]\n",
-    "for run in range(0,10):\n",
+    "for run in range(0, 10):\n",
     "    pop, log, hof = main()\n",
     "\n",
     "    best = hof[0].fitness.values[0]   # best fitness found is stored at index 0 in the hof list\n",
@@ -414,13 +414,14 @@
     "            if fit == best:\n",
     "                break        \n",
     "\n",
-    "    runs.append([best, i])      \n",
+    "    runs.append([best, i])  \n",
+    "\n",
+    "    with open(\"output.csv\", mode = \"a\", newline=\"\") as file:\n",
+    "        writer = csv.writer(file)\n",
+    "        writer.writerows([[best,i]])      \n",
     "    \n",
     "    print(\"min fitness found is %s at generation %s\" % (best, i))\n",
-    "\n",
-    "with open(\"output.csv\", mode = \"w\", newline=\"\") as file:\n",
-    "     writer = csv.writer(file)\n",
-    "     writer.writerows(runs)"
+    "\n"
    ]
   },
   {
