--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -275,8 +275,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "population = 200\n",
-    "generations = 100\n",
+    "population = 500\n",
+    "generations = 50\n",
     "def main():\n",
     "    \n",
     "    # choose a population size: e.g. 200\n",
@@ -400,9 +400,13 @@
     }
    ],
    "source": [
-    "runs = [[\"Best\", \"Generation\"]]\n",
+    "runs = [[\"Best\", \"Generation\", \"Time\"]]\n",
     "for run in range(0, 10):\n",
+    "    start = time.time()\n",
     "    pop, log, hof = main()\n",
+    "    stop = time.time()\n",
+    "\n",
+    "    run_time = stop - start\n",
     "\n",
     "    best = hof[0].fitness.values[0]   # best fitness found is stored at index 0 in the hof list\n",
     "\n",
@@ -414,11 +418,12 @@
     "            if fit == best:\n",
     "                break        \n",
     "\n",
-    "    runs.append([best, i])  \n",
+    "    \n",
+    "    runs.append([best, i, run_time])  \n",
     "\n",
     "    with open(\"output.csv\", mode = \"a\", newline=\"\") as file:\n",
     "        writer = csv.writer(file)\n",
-    "        writer.writerows([[best,i]])      \n",
+    "        writer.writerow([best,i, run_time])         \n",
     "    \n",
     "    print(\"min fitness found is %s at generation %s\" % (best, i))\n",
     "\n"
