first attempt at crossover that doesn't work

--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,12 +150,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Customised crossover"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def custom_crossover(parent1, parent2):\n",
+    "    # child1 = [-1] * len(parent1)\n",
+    "    # child2 = [-1] * len(parent2)\n",
+    "    \n",
+    "    # # If both parents have the same value at position, keep it in the child\n",
+    "    # for index, (p1, p2) in enumerate(zip(parent1, parent2)):\n",
+    "    #     if p1 == \"1\" and p2 == \"1\":\n",
+    "    #         child1[index] = 1\n",
+    "    #         child2[index] = 1\n",
+    "    #     if p1 == \"0\" and p2 == \"0\":\n",
+    "    #         child1[index] = 0\n",
+    "    #         child2[index] = 0\n",
+    "\n",
+    "    # for i in range(len(child1)):\n",
+    "    #     if child1[i] == -1:\n",
+    "    #         if random.random() < 0.5:\n",
+    "    #             child1[i] = parent1[i]\n",
+    "    #         else:\n",
+    "    #             child1[i] = parent2[i]\n",
+    "    #     if child2[i] == -1:\n",
+    "    #         if random.random() < 0.5:\n",
+    "    #             child2[i] = parent1[i]\n",
+    "    #         else:\n",
+    "    #             child2[i] = parent2[i]\n",
+    "\n",
+    "    # if (-1) in child1 or (-1) in child2:\n",
+    "    #     print(\"something is fucked\")\n",
+    "\n",
+    "    # return child1, child2\n",
+    "    return parent1, parent2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Repair function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +322,7 @@
     "\n",
     "# register all operators we need with the toolbox\n",
     "toolbox.register(\"evaluate\", eval_function)\n",
-    "toolbox.register(\"mate\", tools.cxTwoPoint)\n",
+    "toolbox.register(\"mate\", custom_crossover)\n",
     "toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.05)\n",
     "toolbox.register(\"select\", tools.selTournament, tournsize=2)"
    ]
@@ -291,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,69 +374,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gen\tnevals\tavg   \tstd   \tmin\tmax  \n",
-      "0  \t2     \t7594.5\t7405.5\t189\t15000\n",
-      "1  \t0     \t189   \t0     \t189\t189  \n",
-      "2  \t2     \t241.5 \t51.5  \t190\t293  \n",
-      "min fitness found is 189.0 at generation 0\n",
-      "gen\tnevals\tavg  \tstd\tmin\tmax\n",
-      "0  \t2     \t238.5\t5.5\t233\t244\n",
-      "1  \t2     \t237.5\t10.5\t227\t248\n",
-      "2  \t2     \t283.5\t55.5\t228\t339\n",
-      "min fitness found is 227.0 at generation 1\n",
-      "gen\tnevals\tavg \tstd \tmin\tmax  \n",
-      "0  \t2     \t7633\t7367\t266\t15000\n",
-      "1  \t2     \t7624\t7376\t248\t15000\n",
-      "2  \t0     \t7624\t7376\t248\t15000\n",
-      "min fitness found is 248.0 at generation 1\n",
-      "gen\tnevals\tavg  \tstd \tmin\tmax\n",
-      "0  \t2     \t180.5\t77.5\t103\t258\n",
-      "1  \t2     \t103  \t0   \t103\t103\n",
-      "2  \t2     \t102.5\t0.5 \t102\t103\n",
-      "min fitness found is 103.0 at generation 0\n",
-      "gen\tnevals\tavg \tstd \tmin\tmax  \n",
-      "0  \t2     \t7630\t7370\t260\t15000\n",
-      "1  \t0     \t7630\t7370\t260\t15000\n",
-      "2  \t0     \t7630\t7370\t260\t15000\n",
-      "min fitness found is 260.0 at generation 0\n",
-      "gen\tnevals\tavg\tstd\tmin\tmax\n",
-      "0  \t2     \t120\t47 \t73 \t167\n",
-      "1  \t1     \t184.5\t17.5\t167\t202\n",
-      "2  \t2     \t167.5\t0.5 \t167\t168\n",
-      "min fitness found is 73.0 at generation 0\n",
-      "gen\tnevals\tavg  \tstd\tmin\tmax\n",
-      "0  \t2     \t122.5\t2.5\t120\t125\n",
-      "1  \t2     \t170  \t50 \t120\t220\n",
-      "2  \t0     \t170  \t50 \t120\t220\n",
-      "min fitness found is 120.0 at generation 0\n",
-      "gen\tnevals\tavg\tstd\tmin\tmax\n",
-      "0  \t2     \t149\t16 \t133\t165\n",
-      "1  \t0     \t149\t16 \t133\t165\n",
-      "2  \t2     \t131\t1  \t130\t132\n",
-      "min fitness found is 133.0 at generation 0\n",
-      "gen\tnevals\tavg  \tstd \tmin\tmax\n",
-      "0  \t2     \t161.5\t92.5\t69 \t254\n",
-      "1  \t0     \t69   \t0   \t69 \t69 \n",
-      "2  \t2     \t70   \t1   \t69 \t71 \n",
-      "min fitness found is 69.0 at generation 0\n",
-      "gen\tnevals\tavg\tstd\tmin\tmax\n",
-      "0  \t2     \t189\t3  \t186\t192\n",
-      "1  \t2     \t185\t1  \t184\t186\n",
-      "2  \t2     \t184.5\t0.5\t184\t185\n",
-      "min fitness found is 186.0 at generation 0\n"
+      "gen\tnevals\tavg    \tstd    \tmin\tmax  \n",
+      "0  \t50    \t3740.08\t6327.82\t64 \t15000\n",
+      "1  \t26    \t767.2  \t2906.07\t64 \t15000\n",
+      "2  \t23    \t448.18 \t2079.91\t64 \t15000\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[157], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m run \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m      3\u001b[0m     start \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m----> 4\u001b[0m     pop, log, hof \u001b[38;5;241m=\u001b[39m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m     stop \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m      7\u001b[0m     run_time \u001b[38;5;241m=\u001b[39m stop \u001b[38;5;241m-\u001b[39m start\n",
+      "Cell \u001b[1;32mIn[156], line 21\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     17\u001b[0m stats\u001b[38;5;241m.\u001b[39mregister(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmax\u001b[39m\u001b[38;5;124m\"\u001b[39m, np\u001b[38;5;241m.\u001b[39mmax)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# run the algorithm: we need to tell it what parameters to use\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# cxpb = crossover probability; mutpb = mutation probability; ngen = number of iterations\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m pop, log \u001b[38;5;241m=\u001b[39m \u001b[43malgorithms\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meaSimple\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpop\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtoolbox\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcxpb\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmutpb\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.05\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mngen\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgenerations\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstats\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstats\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhalloffame\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mhof\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m pop, log, hof\n",
+      "File \u001b[1;32mc:\\Users\\julka\\anaconda3\\envs\\eco\\Lib\\site-packages\\deap\\algorithms.py:173\u001b[0m, in \u001b[0;36meaSimple\u001b[1;34m(population, toolbox, cxpb, mutpb, ngen, stats, halloffame, verbose)\u001b[0m\n\u001b[0;32m    171\u001b[0m invalid_ind \u001b[38;5;241m=\u001b[39m [ind \u001b[38;5;28;01mfor\u001b[39;00m ind \u001b[38;5;129;01min\u001b[39;00m offspring \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ind\u001b[38;5;241m.\u001b[39mfitness\u001b[38;5;241m.\u001b[39mvalid]\n\u001b[0;32m    172\u001b[0m fitnesses \u001b[38;5;241m=\u001b[39m toolbox\u001b[38;5;241m.\u001b[39mmap(toolbox\u001b[38;5;241m.\u001b[39mevaluate, invalid_ind)\n\u001b[1;32m--> 173\u001b[0m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mind\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfit\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mzip\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43minvalid_ind\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfitnesses\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[0;32m    174\u001b[0m \u001b[43m    \u001b[49m\u001b[43mind\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfitness\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mfit\u001b[49m\n\u001b[0;32m    176\u001b[0m \u001b[38;5;66;03m# Update the hall of fame with the generated individuals\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[154], line 35\u001b[0m, in \u001b[0;36meval_function\u001b[1;34m(individual)\u001b[0m\n\u001b[0;32m     31\u001b[0m     fitness \u001b[38;5;241m=\u001b[39m invalid_penalty \u001b[38;5;66;03m# no cameras\u001b[39;00m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;66;03m# only call this if the solution is not invalid\u001b[39;00m\n\u001b[1;32m---> 35\u001b[0m     coverage \u001b[38;5;241m=\u001b[39m \u001b[43mobjective_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43msolution\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minstance_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtotal_cameras\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minstance_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m coverage \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0.99\u001b[39m:\n\u001b[0;32m     38\u001b[0m         \u001b[38;5;66;03m# decide how to penalise this solution which does not provide 100% coverage \u001b[39;00m\n\u001b[0;32m     39\u001b[0m         fitness \u001b[38;5;241m=\u001b[39m not_covered_penalty_factor  \u001b[38;5;66;03m# you should modify this\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[150], line 8\u001b[0m, in \u001b[0;36mobjective_function\u001b[1;34m(x, instance_size, nb_cameras, instance_file)\u001b[0m\n\u001b[0;32m      6\u001b[0m params \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%.16g\u001b[39;00m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m a \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m x]\n\u001b[0;32m      7\u001b[0m cmd \u001b[38;5;241m=\u001b[39m [path_binary,\u001b[38;5;28mstr\u001b[39m(instance_size),\u001b[38;5;28mstr\u001b[39m(nb_cameras)]\u001b[38;5;241m+\u001b[39mparams\u001b[38;5;241m+\u001b[39m[instance_file]\n\u001b[1;32m----> 8\u001b[0m s \u001b[38;5;241m=\u001b[39m \u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_output\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcmd\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mfloat\u001b[39m(s)\n",
+      "File \u001b[1;32mc:\\Users\\julka\\anaconda3\\envs\\eco\\Lib\\subprocess.py:466\u001b[0m, in \u001b[0;36mcheck_output\u001b[1;34m(timeout, *popenargs, **kwargs)\u001b[0m\n\u001b[0;32m    463\u001b[0m         empty \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    464\u001b[0m     kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minput\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m empty\n\u001b[1;32m--> 466\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mpopenargs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstdout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mPIPE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtimeout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcheck\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    467\u001b[0m \u001b[43m           \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mstdout\n",
+      "File \u001b[1;32mc:\\Users\\julka\\anaconda3\\envs\\eco\\Lib\\subprocess.py:550\u001b[0m, in \u001b[0;36mrun\u001b[1;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[0;32m    548\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Popen(\u001b[38;5;241m*\u001b[39mpopenargs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs) \u001b[38;5;28;01mas\u001b[39;00m process:\n\u001b[0;32m    549\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 550\u001b[0m         stdout, stderr \u001b[38;5;241m=\u001b[39m \u001b[43mprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommunicate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    551\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m TimeoutExpired \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[0;32m    552\u001b[0m         process\u001b[38;5;241m.\u001b[39mkill()\n",
+      "File \u001b[1;32mc:\\Users\\julka\\anaconda3\\envs\\eco\\Lib\\subprocess.py:1196\u001b[0m, in \u001b[0;36mPopen.communicate\u001b[1;34m(self, input, timeout)\u001b[0m\n\u001b[0;32m   1194\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_stdin_write(\u001b[38;5;28minput\u001b[39m)\n\u001b[0;32m   1195\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstdout:\n\u001b[1;32m-> 1196\u001b[0m     stdout \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstdout\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1197\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstdout\u001b[38;5;241m.\u001b[39mclose()\n\u001b[0;32m   1198\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstderr:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "runs = [[\"Best\", \"Generation\", \"Time\"]]\n",
-    "for run in range(0, 10):\n",
+    "for run in range(0, 1):\n",
     "    start = time.time()\n",
     "    pop, log, hof = main()\n",
     "    stop = time.time()\n",
@@ -427,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
