--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,8 +123,11 @@
     "    for j in indexes:\n",
     "        individual[j] = 1\n",
     "\n",
-    "    if len(cameras_on_walls(individual)) > 0:\n",
-    "        repair_solution(individual)\n",
+    "    full_solution = convert_compressed_to_full(individual)\n",
+    "\n",
+    "    if len(cameras_on_walls(full_solution)) > 0:\n",
+    "        repair_solution(full_solution)\n",
+    "        individual = convert_full_to_compressed(full_solution)\n",
     "\n",
     "    return individual\n",
     "\n",
@@ -149,12 +152,12 @@
     "    individual = []\n",
     "    \n",
     "    # Iterate through 2x2 blocks\n",
-    "    for i in range(0, 100, 2):  # Rows\n",
-    "        for j in range(0, 100, 2):  # Columns\n",
+    "    for i in range(0, full_grid_size, 2):  # Rows\n",
+    "        for j in range(0, full_grid_size, 2):  # Columns\n",
     "            # Calculate indices of the 2x2 block\n",
-    "            top_left = i * 100 + j\n",
+    "            top_left = i * full_grid_size + j\n",
     "            top_right = top_left + 1\n",
-    "            bottom_left = top_left + 100\n",
+    "            bottom_left = top_left + full_grid_size\n",
     "            bottom_right = bottom_left + 1\n",
     "            \n",
     "            # Determine the compressed value for this block\n",
@@ -180,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +203,11 @@
     "    for pos in clash_positions:\n",
     "        prob = random.randint(0, 1)\n",
     "        if prob < prob_of_repair:\n",
-    "            solution[pos] = 0"
+    "            solution[pos] = 0\n",
+    "\n",
+    "def add_single_camera(individual):\n",
+    "    position = random.randint(0, compressed_cells)\n",
+    "    individual[position] = 1"
    ]
   },
   {
@@ -212,22 +219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this is the eval function called from DEAP: you can modify this to adapt the fitness for invalid solutions. The fitness of a valid solution\n",
-    "# is obtained by calling the binary executable\n",
-    "\n",
-    "# This is the function where you will likely do most work!\n",
-    "\n",
     "def eval_function(individual):\n",
-    "    solution = [] # list of length equivalent to number of cells in the grid, where each value is 0 or 1\n",
+    "    solution = []\n",
     "    total_cameras = 99999\n",
     "    fitness = total_cameras\n",
     "\n",
     "    # convert individual to the solution list - this depends on the representation\n",
     "    solution = convert_compressed_to_full(individual)\n",
+    "\n",
+    "    # make sure there's at least one camera\n",
+    "    if sum(solution) < 1:\n",
+    "        add_single_camera(individual)\n",
     "    \n",
     "    # check if cameras on walls\n",
     "    if instance_file == \"\":\n",
@@ -241,25 +247,16 @@
     "\n",
     "    total_cameras = np.sum(solution)\n",
     "\n",
-    "    invalid_penalty=20000\n",
     "    not_covered_penalty_factor = 15000\n",
     "\n",
-    "    # assign fitness after checking for validity\n",
-    "    if  total_cameras < 1:\n",
-    "        fitness = invalid_penalty # no cameras\n",
+    "    # only call this if the solution is not invalid\n",
+    "    coverage = objective_function(solution, instance_size, total_cameras, instance_file)\n",
     "\n",
+    "    if coverage < 0.99:\n",
+    "        fitness = not_covered_penalty_factor  \n",
     "    else:\n",
-    "        # only call this if the solution is not invalid\n",
-    "        coverage = objective_function(solution, instance_size, total_cameras, instance_file)\n",
-    "    \n",
-    "        if coverage < 0.99:\n",
-    "            # decide how to penalise this solution which does not provide 100% coverage \n",
-    "            fitness = not_covered_penalty_factor  # you should modify this\n",
-    "        else:\n",
-    "            fitness = total_cameras  # fitness is the number of cameras used (minimise)\n",
+    "        fitness = total_cameras \n",
     "\n",
-    "    # print(\"evaluated individual with \" + str(total_cameras) + \" cameras, elapsed: \" + str(total_time))\n",
-    "    #print(\"cameras on walls \" + str(cameras_on_walls) + \", total cameras: \" + str(total_cameras) + \", fitness: \" + str(fitness))\n",
     "    return fitness,"
    ]
   },
@@ -455,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -514,6 +511,13 @@
     "final_solution = convert_compressed_to_full(final_solution)\n",
     "\n",
     "actual_cameras=sum(final_solution)  # need to pass the actual numbers of cameras in the solution, regardless of whether it is valid\n",
+    "print(actual_cameras)\n",
+    "coverage = objective_function(final_solution, instance_size, actual_cameras, instance_file)\n",
+    "print(coverage)\n",
+    "cameras_on_walls = check_walls(final_solution, instance_file) \n",
+    "print(cameras_on_walls)\n",
+    "print(final_solution)\n",
+    "\n",
     "\n",
     "# choose an empty grid\n",
     "#visualise_objective_function(sol, instance_size= 100, nb_cameras=2, instance_file=\"\")\n",
