change scalar on penalty

--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -254,7 +254,7 @@
     "    if coverage < 0.99:\n",
     "        uncovered = (1 - coverage) * 100\n",
     "        # weighted penalty and then adapted dynamically according to the generation\n",
-    "        penalty = (uncovered * uncovered * 2) * (1 + (current_generation / generations))\n",
+    "        penalty = (uncovered * uncovered * 2) * (1 + 0.5 * (current_generation / generations))\n",
     "        fitness = total_cameras + penalty \n",
     "    else:\n",
     "        fitness = total_cameras \n",
